[package]
name = "BinaryOptionsToolsV2"
version = "0.1.6-alpha.2"
edition = "2021"
description = "A library to connect to PocketOption using python with async and sync support."
license = "BSD License (BSD)"
homepage = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "BinaryOptionsToolsV2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["experimental-async", "chrono"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }

binary-option-tools = { path = "../crates/binary_options_tools" }

thiserror = "2.0.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
uuid = "1.11.0"
tracing = "0.1.41"
tokio = "1.42.0"
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.39"
